  object.

  Note that future versions of Test::More (0.95_01+) will no longer stringify
  arguments to is(), which means that older versions of DateTime may cause new
  test failures when you upgrade Test::More. It is highly recommended that you
  upgrade DateTime before upgrading to Test::More 0.95_01+.

  Patch by Michael Schwern. RT #55453.


0.53   2009-12-06

- Added Test::Exception to build_requires.


0.52   2009-12-05

- Numeric to ->new() are now all validated to make sure they are
  integers. Previously, things like "month => 11.2" would have been
  allowed. Based on a bug report from Max Kanat-Alexandar. RT #45767.

- Added a warning to the docs suggesting that you cache the locale time zone
  if you need to make many DateTime objects in the local zone. Looking up the
  local zone can be fairly expensive. RT #46753.


0.51   2009-11-01

- Switched to Module::Build. To force a non-XS build, start the build
  process with "perl Build.PL --pp".

- POD-related tests are only run for the maintainer now.

- Fixed handling of negative years in CLDR formatting for "y" and "u"
  patterns. Note that the LDML spec says nothing about how this should work,
  so I took my best guess.


0.50   2009-05-11

- Tests were failing on Win32 because they attempted to use a negative
  epoch. Fixed so that these tests are skipped. Fixes RT #45966.


0.49   2009-05-04

- A bug in the test code for handling overloaded objects in from_epoch
  resulted in a test failure on Perl 5.8.x. This release contains no
  changes besides a test code fix.


0.48   2009-05-04

- Some of the accessors (the "main" ones like year(), month(), day(),
  etc) now warn if they are passed a value. Patch from Shawn
  Moore. Fixes RT #6979.

- DateTime::Duration expected DateTime to be loaded and used some
  constants from it, but did not explicitly "use DateTime". Reported
  by Jeff Kubina. RT #44740.

- The CLDR formatting for "c" and "cc" was incorrectly using the local